<resources>
    <string name="app_name">AndroidPU121</string>
    <!-- Home-->
    <string name="main_btn_views" translatable="false">Элементы UI</string>
    <string name="main_btn_calc" translatable="false">Калькулятор</string>
    <string name="main_tv_title" translatable="false">Знакомство с Android</string>
    <string name="main_btn_2048" translatable="false">2048</string>
    <string name="main_btn_rates" translatable="false">Курсы валют</string>
    <string name="main_btn_chat" translatable="false">Чат</string>

    <!-- region   2048-->
    <string name="game_tv_title">2048</string>
    <string name="game_tv_hint"> Объединяйте числа чтобы получить 2048!</string>
    <string name="game_btn_new"> Новая</string>
    <string name="game_btn_undo">Отмена</string>
    <string name="game_tv_0"> </string>
    <string name="game_tv_2">2</string>
    <string name="game_tv_4">4</string>
    <string name="game_tv_8">8</string>
    <string name="game_tv_16">16</string>
    <string name="game_tv_32">32</string>
    <string name="game_tv_64">64</string>
    <string name="game_tv_128">128</string>
    <string name="game_tv_254">254</string>
    <string name="game_tv_512">512</string>
    <string name="game_tv_1024">1024</string>
    <string name="game_tv_2048">2048</string>
    <string name="game_toast_no_move">Нет хода</string>
    <string name="game_tv_score">СЧЕТ\n%d</string>
    <string name="game_tv_best_score">ЛУЧШИЙ\n%d</string>
    <string name="game_tv_sound">ВЫКЛ.\ВКЛ. звук</string>
    <string name="game_over">Конец игры</string>
    <string name="game_over_dialog">Хотите сыграть заново?</string>
    <string name="game_over_yes">Да</string>
    <string name="game_over_undo">Ход назад</string>
    <string name="game_over_no">Нет</string>
    <!--endregion-->
    <string name="views_tv_title" translatable="false">Views</string>
    <string name="views_tv_horizontal_layout" translatable="false">\'LayoutConstraint: Horizontal\'</string>

    <!--region    Calculator-->
    <string name="calc_tv_title">Калькулятор</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232b</string>
    <string name="calc_btn_inverse">\u00B9/\u2093</string>
    <string name="calc_btn_square">x\u00B2</string>
    <string name="calc_btn_sqrt">\u221A\u2093\u0304</string>
    <string name="calc_btn_divide">\u00F7</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_multiply">\u00D7</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_minus">-</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_plus">+</string>
    <string name="calc_btn_plus_minus">-+</string>
    <string name="calc_btn_0">\u2205</string>
    <string name="calc_btn_comma">,</string>
    <string name="calc_btn_equal">=</string>
    <string name="calc_div_zero_message">Cannot divide by zero</string>
    <!--endregion-->

    <string name="rates_ex_thread">rates_ex_thread</string>
    <string name="rates_btn_by_alpha">По названию</string>
    <string name="rates_btn_by_curse">По курсу</string>
    <string name="rates_btn_by_reset">Сбросить</string>
<!-- region chat -->
    <string name="chat_tv_title">Chat</string>
    <string name="chat_tv_nik">Ник в чате</string>
    <string name="chat_et_nik">Alex</string>

<!--    endregion-->
</resources>